<resources>
    <string name="app_name">MakanCuy</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_tittle_banner">DISKON 40%</string>
    <string name="text_desc_banner">Pesan Makanan Lewat Aplikasi dan Dapatkan Diskon</string>
    <string name="text_name">Hello, %1$s</string>
    <string name="default_username">Hello, There</string>
    <string name="text_greetings">Mau Makan Apa Hari Ini?</string>
    <string name="text_tittle_categories">Categories</string>
    <string name="text_see_all">See All..</string>
    <string name="text_categori_1">Nasi</string>
    <string name="text_categori_2">Mie</string>
    <string name="text_categori_3">Snack</string>
    <string name="text_categori_4">Minum</string>
    <string name="text_tittle_list">List Menu Makanan</string>
    <string name="text_menu_1">Ayam Goreng</string>
    <string name="amount_placeholder">%d</string>
    <string name="text_add_to_cart">Tambahkan ke Keranjang - %1$s</string>
    <string name="title_menu_home">For You</string>
    <string name="title_menu_cart">Your Cart</string>
    <string name="title_menu_profile">Profile</string>
    <string name="text_title_location">Lokasi</string>
    <string name="text_amount">1</string>
    <string name="text_title_notes">Catatan :</string>
    <string name="text_title_shopping_cart">Shopping Cart</string>
    <string name="text_notes_hint">\tTulis Disini</string>
    <string name="text_title_total">Total Harga</string>
    <string name="text_btn_check_out">Check Out</string>
    <string name="text_adding_success">Cart Added successfully</string>
    <string name="text_failed_add">Cart Failed to Add</string>
    <string name="text_loading">Loading</string>
    <string name="text_quantity">x8</string>
    <string name="total_quantity">x%s</string>
    <string name="text_cart_is_empty">Cart is Empty\n</string>
    <string name="text_checkout_header">Order Summary</string>
    <string name="text_payment_method">Payment Method</string>
    <string name="text_cod">CoD</string>
    <string name="text_transfer">Transfer</string>
    <string name="text_delivery">Delivery</string>
    <string name="text_pick_up">Pick Up</string>
    <string name="text_delivery_method">Delivery method</string>
    <string name="shopping_summary">Order Summary</string>
    <string name="hint_name">Nama</string>
    <string name="text_username">devotionfaith</string>
    <string name="text_hint_email">Email</string>
    <string name="hint_username">Username</string>
    <string name="text_email">rgusti530@gmail.com\n</string>
    <string name="text_edit">Edit Username</string>
    <string name="text_editEmail">Edit Email</string>
    <string name="text_save">Save</string>
    <string name="text_success">ORDER SUCCESS</string>
    <string name="text_back_to_home">Back to Home</string>
    <string name="text_check_out_error">Check Out Error</string>
    <string name="text_count_cart">(%s)</string>
    <string name="text_hint_password">Password</string>
    <string name="hint_confirm_password">Confirm password</string>
    <string name="text_button_login">LOGIN</string>
    <string name="text_button_signup">SIGN UP</string>
    <string name="text_highlight_login_here">Login Here</string>
    <string name="text_error_name_cannot_empty">Name cannot empty</string>
    <string name="text_error_email_empty">Email cannot empty</string>
    <string name="text_error_email_invalid">Email is invalid</string>
    <string name="text_error_password_empty">Password cannot empty</string>
    <string name="text_error_password_less_than_8_char">Password cannot less than 8 character</string>
    <string name="text_password_does_not_match">Password does not match</string>
    <string name="text_highlight_register">Register Here</string>
    <string name="text_button_logout">Log Out</string>
    <string name="text_success_notif">BERHASIL</string>
    <string name="text_error_menu">Loading Menu Gagal</string>
    <string name="text_error_category">Loading Category Gagal</string>
    <string name="kembali_ke_home">Kembali ke Home</string>
</resources>