<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginVertical="8dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_menu_image"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_gravity="center"
        app:cardCornerRadius="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/iv_menu_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:scaleType="centerCrop"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/avatars" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tv_menu_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="8dp"
        android:ellipsize="end"
        android:maxLines="2"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/cv_menu_image"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Ayam Bakar" />

    <TextView
        android:id="@+id/tv_menu_price"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/tv_menu_name"
        app:layout_constraintTop_toBottomOf="@id/tv_menu_name"
        tools:text="Rp40.000" />

    <ImageView
        android:id="@+id/iv_delete"
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:src="@drawable/ic_delete"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/tv_menu_name"/>

    <LinearLayout
        android:id="@+id/layout_counter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/cv_menu_image">

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_substract"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@color/md_theme_light_onPrimary"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardBackgroundColor="@color/md_theme_light_onPrimary"
            app:cardCornerRadius="5dp"
            app:cardElevation="3dp">

            <ImageView
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_margin="4dp"
                android:src="@drawable/ic_substract" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tv_amount"
            style="@style/TextAppearance.AppCompat.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="5dp"
            android:text="@string/text_amount"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@color/md_theme_light_onPrimary"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardBackgroundColor="@color/md_theme_light_onPrimary"
            app:cardCornerRadius="5dp"
            app:cardElevation="3dp">

            <ImageView
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_margin="4dp"
                android:src="@drawable/ic_plus" />
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/md_theme_light_onSecondaryContainer"
        app:layout_constraintTop_toBottomOf="@id/cv_menu_image"
        app:layout_constraintStart_toEndOf="@id/cv_menu_image"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:cardCornerRadius="20dp"
        app:layout_constraintTop_toBottomOf="@id/cv_menu_image"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="64dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/tv_menu_name">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingHorizontal="16dp"
            android:background="@color/md_theme_dark_inverseSurface">
            <TextView
                android:id="@+id/tv_title_notes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_title_notes"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etv_notes"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:textSize="12sp"
                android:hint="@string/text_notes_hint"
                android:background="@null"
                app:layout_constraintStart_toEndOf="@id/tv_title_notes"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:autofillHints="-"
                android:inputType="text" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>